# -not-a-text-editor

./: CMakeLists.txt  backbuffer.c  backbuffer.h  main.c  tui.c  tui.h
gapbuffer/src/lib/: gap_buffer.c  gap_buffer.h  gap_buffer.os
